--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "pg-promise": "10.15.4",
+    "pg-promise": "^11.9.1",
     "prettier": "^1.19.1",
     "sql-template-strings": "^2.2.2"
   },
